# cninja

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
cmake/: download-llvm.cmake  generate-builtins.cmake  setup-tests.cmake
configs/: warnings.cmake
src/: main.cpp
src/builtins/: asan.cmake  clang.cmake  debugmode.cmake  debugsplit.cmake  debugsyms.cmake  default.cmake  earlybinding.cmake  era.cmake  examples.cmake  fast.cmake  finish.cmake  gcc.cmake  gdbindex.cmake  libcxx.cmake  linker-optimizations.cmake  linker-warnings.cmake  linker.cmake  linkerwarnings.cmake  lld.cmake  lto.cmake  mold.cmake  no-examples.cmake  no-tests.cmake  plain.cmake  post.cmake  pre.cmake  small.cmake  start.cmake  static.cmake  tests.cmake  tsan.cmake  ubsan.cmake  visibility.cmake  warnings.cmake
src/cn/: builtins.cpp  builtins.hpp  check.cpp  check.hpp  config.cpp  config.hpp  fmt.hpp  fs.cpp  fs.hpp  generate.cpp  generate.hpp  graph.cpp  graph.hpp  options.cpp  options.hpp  system.hpp  util.hpp
tests/executable/: CMakeLists.txt
tests/shared/: CMakeLists.txt  lib.cpp
tests/static/: CMakeLists.txt
tests/unit/: graph.cpp
